    1FAB6 Feather, 1FAB4 Potted Plant, 1FA9D Hook, 1FAA6 Headstone
    by Liz Bravo @lizbravob
  + Web syndication/RSS logo, Tardis and Power symbols by @fuddl
  + Narwhal, Beluga, Porpoise by @kriskowal
  + More geometric Unicode shapes in extras-unicode/symbol-other by @loominade
  + Doe
  + Texas Flag
  + Esperanto Flag
  + No Handshaking
  + Dejected Face
  + Creative Commons Symbols
  + LinkedIn Logo

Fix:
  * Replaced Dolphin by @kriskowal
  * Replaced Whale and Spouting Whale with blue whales by @kriskowal
  * Moved and renamed Selina Bauer’s Whale and spouting Whale to Orca and Spouting Orca in private use area
  * signs and align Aries, Gemini, Virgo, Scorpio, Capricorn, Libra, Sagittarius, Om,
    Orthodox Cross, Wheel of Dharma, Taurus, Cancer, Leo, Aquarius, Pisces, Ophiuchus
  * Flags:
       Portugal, Afghanistan, Laos, Turkey, Kazakhstan, Maldives, Jersey, New Caledonia,
       Niger, Antarctica, Mayotte, Hong Kong, Aruba, Pirate, Isle of Man, Iraq,
       Bhutan
  * contour in Cat
  * contour in Victory Hand
  * redesign Llama
  * structure in Classical Building
  * tongue in Hot Face
  * drool in Drooling Face
  * Cross Mark
  * Question Mark, White Question Mark
  * contour in Infinity
  * Lab Coat
  * all Prohibited Signs
  * Exploding Head by @taralynnconnelly
  * bed in Bed and Person in Bed
  * skullcap in Person With Skullcap
  * size of Record Button by @fuddl
  * rainbow in Rainbow
  * people in Restroom, Men's Room, Women's Room
  * person in Wheelchair Symbol
  * size of Oncoming Fist
  * contours in Cafeteria
  * orientation of Black Nib

Tech:
  * Blazing fast new build system by Kris Kowal @kriskowal

--------------------------------------------------------------------------------

🦠 OpenMoji 12.2 - 17 March 2020

Many improvements, fixes and new OpenMojis:
👉 First batch of Emoji 13, ca. 1/3 of all new ones
👉 Unicode Emoji 12.1 complete, new gender neutral persons and person-roles
👉 New extras-openmoji: healthcare