@@ -41,3 +41,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 🅮,1F16E,extras-unicode,symbol-other,circled c with overlaid backslash,"license, copyright, creative commons, open, libre, public domain",Carlin MacKenzie,2020-04-17,13
 🅯,1F16F,extras-unicode,symbol-other,circled human figure,"license, copyright, creative commons, open, libre, by, attribution, credit",Carlin MacKenzie,2020-04-17,13
 ⊜,229C,extras-unicode,symbol-other,circled equals,"license, copyright, creative commons, open, libre",Carlin MacKenzie,2020-04-18,1.1
+🏳️‍🟦‍🌌,1F3F3-FE0F-200D-1F7E6-200D-1F30C,extras-unicode,flag,united federation of planets flag,"star trek, future, utopia, trekkie, trekker, space",Alexander Müller,2020-04-25,?
