@@ -3462,6 +3462,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E267,extras-openmoji,ui-element,compose,,"write, compose, author",Kai Magnus Müller,2018-04-18,,,,,,
 ,E268,extras-openmoji,ui-element,add contact,,"add, contact",Kai Magnus Müller,2018-04-18,,,,,,
 ,E269,extras-openmoji,ui-element,link,,"link, chain",Kai Magnus Müller,2018-04-18,,,,,,
+🏳️‍🟦‍🌌,1F3F3-FE0F-200D-1F7E6-200D-1F30C,extras-unicode,flag,united federation of planets flag,,"star trek, future, utopia, trekkie, trekker, space",Alexander Müller,2020-04-25,,,,,?,
 🏳️‍🟩‍⭐‍🟩,1F3F3-FE0F-200D-1F7E9-200D-2B50-200D-1F7E9,extras-unicode,flag,esperanto flag,,"constructed, Zamenhof",Carlin MacKenzie,2020-04-08,,,,,?,
 🏴󠁵󠁳󠁴󠁸󠁿,1F3F4-E0075-E0073-E0074-E0078-E007F,extras-unicode,subdivision-flag,texas flag,,"cowboy, lone star, republic, state",Carlin MacKenzie,2020-04-03,,,,,?,
 🄍,1F10D,extras-unicode,symbol-other,circled zero with slash,,"license, copyright, creative commons, open, libre, public domain",Carlin MacKenzie,2020-04-17,,,,,13,
