@@ -58871,6 +58871,23 @@
     "order": ""
   },
   {
+    "emoji": "🏳️‍🟦‍🌌",
+    "hexcode": "1F3F3-FE0F-200D-1F7E6-200D-1F30C",
+    "group": "extras-unicode",
+    "subgroups": "flag",
+    "annotation": "united federation of planets flag",
+    "tags": "",
+    "openmoji_tags": "star trek, future, utopia, trekkie, trekker, space",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-04-25",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "?",
+    "order": ""
+  },
+  {
     "emoji": "🏳️‍🟩‍⭐‍🟩",
     "hexcode": "1F3F3-FE0F-200D-1F7E9-200D-2B50-200D-1F7E9",
     "group": "extras-unicode",
